<resources>
    <string name="app_name">Vastquery</string>
    <string name="Radio_button_resource">I agree to the Terms and Conditions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="don_t_have_account">Don\'t have account?click here</string>
    <string name="postshop">Shopwise adds                                                      ></string>
    <string name="postproffesion">Proffesional adds                                                  ></string>
    <string name="editshop">Shopwise adds                                                      ></string>
    <string name="editproffession">Proffesional adds                                                  ></string>
    <string name="dialog_title">Shop Types</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>

    <string-array name="shoptype">
        <item>-please select the shop type-</item>
        <item>Accomodation</item>
        <item>Agriculture</item>
        <item>Autocare</item>
    </string-array>

    <string-array name="proftype">
        <item>-please select the proffesional type-</item>
        <item>Accountant</item>
        <item>Administrator</item>
        <item>Analyst</item>
    </string-array>
    <string name="title_activity_service">ServiceActivity</string>
</resources>
